--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.3",
+    "chart.js": "^4.2.0",
     "classnames": "^2.3.2",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
     "ethers": "^5.7.2",
     "next": "13.0.7",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
     "typescript": "4.9.4",
