--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
     "typescript": "4.9.4",
