--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rainbow-me/rainbowkit": "^0.8.1",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.3",
     "chart.js": "^4.2.0",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.5",
+    "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
     "typescript": "4.9.4",
