--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-countdown": "^2.3.5",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "sass": "^1.57.1",
     "typescript": "4.9.4",
     "wagmi": "^0.9.3"
