--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --max-warnings=0",
+    "prettier": "prettier --write \"**/*.{ts,tsx,json,md}\""
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
@@ -16,11 +17,13 @@
     "@types/react": "18.0.26",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "18.0.9",
+    "@typescript-eslint/parser": "^5.53.0",
     "axios": "^1.2.3",
     "chart.js": "^4.2.0",
     "classnames": "^2.3.2",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
+    "eslint-config-prettier": "^8.6.0",
     "ethers": "^5.7.2",
     "next": "13.0.7",
     "react": "18.2.0",
@@ -34,8 +37,10 @@
     "wagmi": "^0.9.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.4"
   }
 }
